# django-clever-selects

./: .gitignore  README.rst  pyproject.toml  setup.py
clever_selects/: forms.py  widgets.py
clever_selects/templatetags/: clever_selects_extras.py
example/: pyproject.toml  requirements.txt
example/cars/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
example/cars/migrations/: 0001_initial.py
example/cars/templates/: cars.html  form.html  home.html
example/example/: settings.py  urls.py
