[tool.poetry]
name = "django-clever-selects"
version = "1.1.1"
description = ""
authors = ["Marc Beringen <mberingen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
